objects/Organizational_Group_Item__c.object
<CustomObject>
    <fields>
        <fullName>Business__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business</label>
        <referenceTo>OrgGroup__c</referenceTo>
        <relationshipLabel>Organizational Group Items</relationshipLabel>
        <relationshipName>Organizational_Group_Items1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ERP_Pricing_Procedure__c</fullName>
        <label>ERP Pricing Procedure</label>
        <referenceTo>ERP_Pricing_Procedure__c</referenceTo>
        <relationshipLabel>Organizational Group Items</relationshipLabel>
        <relationshipName>BU_Org_Group</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OrgGroup__c</fullName>
        <label>OrgGroup</label>
        <referenceTo>OrgGroup__c</referenceTo>
        <relationshipLabel>Organizational Group Items</relationshipLabel>
        <relationshipName>Organizational_Group_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Organizational Group Item</label>
    <nameField>
        <displayFormat>OGI-{00000}</displayFormat>
        <label>Organizational Group Item Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Organizational Group Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>